fixed theme switch, added text-alignment classes

--- a/static/css/reset/font.css
+++ b/static/css/reset/font.css
@@ -18,6 +18,18 @@
     vertical-align: middle;
 }
 
+.text-left {
+    text-align: left;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.text-right {
+    text-align: right;
+}
+
 /*
     <>
 */
